test/compilable/extra-files/pkg/datetime/common.d
module pkg.datetime.common;

void def();
